<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="390dp"
        android:layout_height="77dp"
        android:layout_marginTop="105dp"
        android:background="#FFFFFF"
        android:backgroundTint="#DFFFFFFF"
        android:text="0"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="391dp"
        android:layout_height="505dp"
        android:layout_marginBottom="49dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-1dp">

        <Button
            android:id="@+id/buttonMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButtonMC"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/buttonMmas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButtonMmas"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/buttonMmenos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButtonMmenos"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/buttonDividir"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButtonDivis"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButtonReset"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/buttonPosNeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButtonValNegPos"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/buttonMR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButtonMR"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/buttonMulti"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButtonMulti"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/buttonMR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButton7"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/buttonMulti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButton8"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButton9"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/buttonRestar"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButtonResta"
            android:textColorLink="#0000FFFF"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/buttonDividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButton4"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButton5"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/buttonPosNeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButton6"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/buttonSumar"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButtonSuma"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButton1"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/button0"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButtonCero"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="5" />

        <Button
            android:id="@+id/buttonMmas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButton2"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/buttonMmenos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButton3"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/button."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/strButtonPunto"
            app:layout_column="2"
            app:layout_row="5" />

        <Button
            android:id="@+id/buttonIgual"
            android:layout_width="61dp"
            android:layout_height="116dp"
            android:background="@drawable/buttonshape"
            android:insetLeft="2dp"
            android:text="="
            android:textColorHighlight="#00FFFFFF"
            android:textColorLink="#00FFFFFF"
            app:layout_column="3"
            app:layout_row="4"
            app:layout_rowSpan="2" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>